token service added, reg and login controllers started

--- a/src/js/views/auth/login.html
+++ b/src/js/views/auth/login.html
@@ -1,1 +1,13 @@
 <h1>login!</h1>
+
+<form ng-submit="login.login()">
+  <div class="">
+    <input type="email" placeholder="email" ng-model="login.user.email">
+  </div>
+  <div class="">
+    <input type="password" placeholder="password" ng-model="login.user.password">
+  </div>
+  <div class="">
+    <input type="submit" name="" value="GO!">
+  </div>
+</form>
