--- a/src/js/views/auth/register.html
+++ b/src/js/views/auth/register.html
@@ -1,1 +1,25 @@
 <h1>register!</h1>
+
+<form ng-submit="register.register()">
+  <div class="">
+    <input type="text" placeholder="username" ng-model="register.user.username">
+  </div>
+  <div class="">
+    <input type="text" placeholder="firstname" ng-model="register.user.firstname">
+  </div>
+  <div class="">
+    <input type="text" placeholder="lastname" ng-model="register.user.lastname">
+  </div>
+  <div class="">
+    <input type="email" placeholder="email" ng-model="register.user.email">
+  </div>
+  <div class="">
+    <input type="password" placeholder="password" ng-model="register.user.password">
+  </div>
+  <div class="">
+    <input type="password" placeholder="passwordConfirmation" ng-model="register.user.passwordConfirmation">
+  </div>
+  <div class="">
+    <input type="submit" name="" value="GO!">
+  </div>
+</form>
