--- a/src/js/views/users/users.index.html
+++ b/src/js/views/users/users.index.html
@@ -3,5 +3,5 @@
 <!-- {{users.all}} -->
 
 <ul>
-  <li ng-repeat="user in users.all">{{user.firstname}} {{user.lastname}}</li>
+  <li ng-repeat="user in users.all">{{user.firstname}} {{user.lastname}} {{user.id}}</li>
 </ul>
